@@ -42,3 +42,17 @@ val static_service : string -> Resolver_lwt.svc option Lwt.t
     to resolve hosts *)
 val system_resolver : Resolver_lwt.rewrite_fn
 
+(** {2 Debugging Hooks} *)
+
+(** If [debug] is true, the builtin resolvers will output their
+    resolution responses via the {!debug_print} function.  The default
+    value of [debug] is true if the [CONDUIT_DEBUG] environment variable
+    is set, and false otherwise. *)
+val debug : bool ref
+
+(** [debug_print] is called by the {!debug} functions to output the
+    results of resolution.  Defaults to {!Printf.eprintf} to go to
+    the standard error. *)
+val debug_print : 
+    ((string -> string -> string -> string -> unit, out_channel, unit)
+     format -> string -> string -> string -> string -> unit) ref
